--- a/Linear Regression/Linear Regression.tex
+++ b/Linear Regression/Linear Regression.tex
@@ -158,8 +158,8 @@ Taking the derivative w.r.t. $\boldsymbol{\beta}$
 Equating the derivative to zero for minimization,
 
 \begin{align*}
-    \mathbf{X}^T\mathbf{X}\boldsymbol{\beta} &= \mathbf{X}^T\mathbf{y} \\
-    \boldsymbol{\beta} &= (\mathbf{X}^T\mathbf{X})^{-1}\mathbf{X}^T\mathbf{y}    
+    \mathbf{X}^T\mathbf{X}\boldsymbol{\hat{\beta}} &= \mathbf{X}^T\mathbf{y} \\
+    \boldsymbol{\hat{\beta}} &= (\mathbf{X}^T\mathbf{X})^{-1}\mathbf{X}^T\mathbf{y}    
 \end{align*}
 
 \section{Gauss-Markov Theorem}
