--- a/Linear Regression/Linear Regression.tex
+++ b/Linear Regression/Linear Regression.tex
@@ -34,25 +34,25 @@ Generally, sum of squares of all the $N$ errors is minimized to define the best 
 \begin{figure}[htbp]
 	\centering
 	\begin{tikzpicture}
-							    
+									    
 		\draw[-latex] (0,0) -- (6,0) node[right]{x};
 		\draw[-latex] (0,0) -- (0,5) node[left]{y};	
-						
+								
 		\draw (0, 1) -- (5, 4);
-						
+								
 		\draw (5, 4) node [above right] {$y = \beta_0 + \beta_1x$};
 		\draw (0, 1) node [left] {$\beta_0$};
-						
+								
 		\foreach \Point in {(1,3), (2, 3), (4, 4), (3, 2), (1.5, 1)}{
 			\node at \Point {\textbullet};
 		};
-				        
+						        
 		\draw (1, 3) node [above] {$x_1, y_1$};
 		\draw (1.5, 1) node [below] {$x_2, y_2$};
 		\draw (2, 3) node [above right] {$x_3, y_3$};
 		\draw (3, 2) node [below] {$x_4, y_4$};
 		\draw (4, 4) node [above] {$x_5, y_5$};
-				        
+						        
 		\draw [thick] (1, 3) -- (1, 1.6);
 		\draw [thick] (1.5, 1) -- (1.5, 1.9);
 		\draw [thick] (2, 3) -- (2, 2.2);
@@ -249,5 +249,27 @@ Assume that $Var[\mathbf{v}] = \sigma^2\mathbf{I}$. This is same as saying that,
 \section{Gauss-Markov Theorem}
 
 This theorem states that under above assumptions [1], [2] and [3], the OLS estimators are BLUE (Best Linear Unbiased Estimators). This means that there are no other unbiased linear estimators which have a lower variance of $\boldsymbol{\beta}$ than OLS.  
+
+\section{Ridge Regression}
+
+A penalty proportional to sum of squares of all $\beta$ coefficients is added to the residual sum of squares in ridge regression to make sure that coefficients are reasonably bounded and don't grow arbitarily large.
+
+\begin{align*}
+	\mathbf{Error}(\boldsymbol{\beta}) & = \boldsymbol{\epsilon}^T\boldsymbol{\epsilon} + \lambda\boldsymbol{\beta}^T\boldsymbol{\beta} 
+\end{align*}
+
+The solution to the above ridge regression problem is given below,
+
+
+\begin{align*}
+	\boldsymbol{\hat{\beta}} & = (\mathbf{X}^T\mathbf{X} + \lambda\mathbf{I})^{-1}\mathbf{X}^T\mathbf{y} 
+\end{align*}
+
+As $\lambda$ tends to zero, the ridge solution tends to the OLS solution and as $\lambda$ tends to infinity, the ridge solution tends to zero because of the infinite penalty for non-zero coefficients.
+
+If $\mathbf{X}^T\mathbf{X}$ is non-invertible, OLS has no unique solution, but this problem does not occur with ridge regression as the matrix $\mathbf{X}^T\mathbf{X} + \lambda\mathbf{I}$ is always guaranteed to be invertible, therfore always ensuring unique solution.
+
+The fundamental idea with ridge regression is to incur some bias in order to reduce variance which may often be desirable in practical situations.
+
 
 \end{document}
